# agentprism

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agentmux/: __init__.py  server.py  session.py  tools.py
agentmux/adapters/: __init__.py  base.py  claude_code.py  codex.py  copilot.py
agentprism/: __init__.py  dashboard.py  notifications.py  server.py  session.py  standalone_dashboard.py  tools.py
agentprism/adapters/: __init__.py  base.py  claude_code.py  codex.py  copilot.py  gemini.py  ollama.py
