[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmux"
version = "0.1.0"
description = "Universal MCP server that exposes coding agents (Copilot, Claude Code, Codex) as subagents via a unified tool interface"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Stefan Maron", email = "stefan@stefanmaronconsulting.com" },
]
keywords = ["mcp", "ai", "agents", "copilot", "claude", "codex", "subagent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
agentmux = "agentmux.server:main"

[project.urls]
Homepage = "https://github.com/StefanMaron/agentmux"
Repository = "https://github.com/StefanMaron/agentmux"
Issues = "https://github.com/StefanMaron/agentmux/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentmux"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]
